# shader-language-server

./: .gitignore  Cargo.toml  README.md  package.json  send.js
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml
shader-intrinsic-parser/: Cargo.toml  README.md
shader-intrinsic-parser/src/: common.rs  main.rs
shader-intrinsic-parser/src/glsl/: extensions.rs  keywords.rs  methods.rs  mod.rs  types.rs
shader-intrinsic-parser/src/hlsl/: functions.rs  mod.rs  semantics.rs  types.rs
shader-intrinsic-parser/src/wgsl/: mod.rs
shader-language-server/: Cargo.toml  README.md
shader-language-server/src/: main.rs  server.rs
shader-language-server/src/server/: common.rs  completion.rs  debug.rs  diagnostic.rs  goto.rs  hover.rs  server_config.rs  server_connection.rs  server_file_cache.rs  server_language_data.rs  signature.rs
shader-sense/: Cargo.toml
shader-sense/examples/: main.rs
shader-sense/src/: lib.rs
shader-sense/src/symbols/: glsl_filter.rs  glsl_parser.rs  hlsl_filter.rs  hlsl_parser.rs  mod.rs  parser.rs  symbols.rs  wgsl_parser.rs
shader-sense/src/symbols/intrinsics/: glsl-intrinsics.json  hlsl-intrinsics.json
shader-sense/src/validator/: dxc.rs  glslang.rs  mod.rs  naga.rs  validator.rs
shader-sense/test/glsl/: error-parsing.frag.glsl  include-config.frag.glsl  ok.frag.glsl  scopes.frag.glsl
shader-sense/test/glsl/inc0/inc1/: level1.glsl
shader-sense/test/hlsl/: 16bit-types.hlsl  error-notes.hlsl  error-parsing.hlsl  macro.hlsl  ok.hlsl
shader-sense/test/hlsl/folder/: folder-file.hlsl
shader-sense/test/hlsl/inc0/inc1/: level1.hlsl
shader-sense/test/wgsl/: frag.wgsl  ok.wgsl
src/: common.rs  dxc.rs  glslang.rs  include.rs  main.rs  naga.rs  server.rs  shader_error.rs  symbols.rs  validator.rs
src/intrinsics/: glsl-intrinsics.json  hlsl-intrinsics.json
src/server/: common.rs  completion.rs  diagnostic.rs  goto.rs  hover.rs  server_config.rs  server_file_cache.rs  server_language_data.rs  signature.rs
src/shaders/: include.rs  mod.rs  shader.rs  shader_error.rs
src/shaders/symbols/: glsl.rs  glsl_filter.rs  glsl_parser.rs  hlsl.rs  hlsl_parser.rs  mod.rs  parser.rs  symbols.rs  wgsl_parser.rs
src/shaders/symbols/intrinsics/: glsl-intrinsics.json  hlsl-intrinsics.json  wgsl-intrinsics.json
src/shaders/validator/: dxc.rs  glslang.rs  mod.rs  naga.rs  validator.rs
test/glsl/: include-level.comp.glsl  macro.frag.glsl  nostage.glsl  ok.frag.glsl
test/glsl/inc0/: level0-fail.glsl  level0.glsl
test/glsl/inc0/inc1/: level1.glsl
test/hlsl/: include-config.hlsl  include-level.hlsl  level-root.hlsl  vertex.hlsl
test/hlsl/inc0/: level0-fail.hlsl  level0.hlsl
