[package]
name = "shader_language_server"
description = "Language server for HLSL / GLSL / WGSL shaders using LSP protocol."
repository = "https://github.com/antaalt/shader-language-server"
keywords = ["shader", "graphics", "hlsl", "glsl", "wgsl", "linting", "validation", "lsp"]
categories = ["development-tools", "graphics"]
version = "0.3.0"
edition = "2021"
exclude = [
    ".github/*",
    "package.json",
    "send.js",
]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.11.5"
glslang = "0.6.0"
log = "0.4.22"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
naga = { version = "0.12.2", features = ["wgsl-in", "validate", "span"] }
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
# cannot load DXC dll in wasi
# There is an issue to compile DXC statically:
# https://github.com/Traverse-Research/hassle-rs/issues/57
hassle-rs = "0.11.0"
