[package]
name = "shader-language-server"
description = "Language server for HLSL / GLSL / WGSL shaders using LSP protocol."
repository = "https://github.com/antaalt/shader-sense/tree/main/shader-language-server"
keywords = ["shader", "lsp", "hlsl", "glsl", "wgsl"]
categories = ["development-tools", "graphics"]
version = "0.4.1"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
shader-sense = { version = "0.1.0", path = "../shader-sense" }
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
cfg-if = "1.0.0"
env_logger = "0.11.5"
log = "0.4.22"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
