[package]
name = "shader-sense"
description = "Library for runtime shader validation and representation"
repository = "https://github.com/antaalt/shader-sense"
keywords = ["shader", "validate", "hlsl", "glsl", "wgsl"]
categories = ["development-tools", "graphics"]
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
glslang = "0.6.0"
naga = { version = "0.12.2", features = ["wgsl-in", "validate", "span"] }
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
# There is a issue with dup that wont compile for WASI.
# It was fixed with 0.24.0, but lang does not rely on it yet, so use old version.
tree-sitter = "=0.20.9"
tree-sitter-glsl = "=0.1.4"
tree-sitter-hlsl = "=0.1.2"
tree-sitter-wgsl-bevy = "=0.1.3"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
# cannot load DXC dll in wasi
# There is an issue to compile DXC statically:
# https://github.com/Traverse-Research/hassle-rs/issues/57
hassle-rs = "0.11.0"
